changed main file

--- a/main.ipynb
+++ b/main.ipynb
@@ -14,7 +14,8 @@
     }
    ],
    "source": [
-    "# simple function to print hello\n"
+    "# simple function to print hello\n",
+    "qwefqwef"
    ]
   },
   {
