--- a/main.ipynb
+++ b/main.ipynb
@@ -15,7 +15,9 @@
    ],
    "source": [
     "# simple function to print hello\n",
-    "qwefqwef"
+    "qwefqwef\n",
+    "\n",
+    "qq"
    ]
   },
   {
