--- a/dataloader/test_imagenet_dataloader.ipynb
+++ b/dataloader/test_imagenet_dataloader.ipynb
@@ -2,74 +2,204 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/vit/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Downloading readme: 100%|██████████| 10.5k/10.5k [00:00<00:00, 77.6kB/s]\n",
+      "Downloading data: 100%|██████████| 490M/490M [00:14<00:00, 34.9MB/s] \n",
+      "Downloading data: 100%|██████████| 464M/464M [00:13<00:00, 35.0MB/s] \n",
+      "Downloading data: 100%|██████████| 472M/472M [00:13<00:00, 35.8MB/s] \n",
+      "Downloading data: 100%|██████████| 464M/464M [00:11<00:00, 40.1MB/s] \n",
+      "Downloading data: 100%|██████████| 475M/475M [00:11<00:00, 40.9MB/s] \n",
+      "Downloading data: 100%|██████████| 470M/470M [00:11<00:00, 39.3MB/s] \n",
+      "Downloading data: 100%|██████████| 478M/478M [00:12<00:00, 38.3MB/s] \n",
+      "Downloading data: 100%|██████████| 486M/486M [00:12<00:00, 39.4MB/s] \n",
+      "Downloading data: 100%|██████████| 423M/423M [00:10<00:00, 39.3MB/s] \n",
+      "Downloading data: 100%|██████████| 413M/413M [00:11<00:00, 37.5MB/s] \n",
+      "Downloading data: 100%|██████████| 426M/426M [00:10<00:00, 40.5MB/s] \n",
+      "Generating train split: 100%|██████████| 75750/75750 [00:02<00:00, 27452.69 examples/s]\n",
+      "Generating validation split: 100%|██████████| 25250/25250 [00:00<00:00, 30178.90 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Import necessary libraries\n",
-    "import argparse\n",
+    "from datasets import load_dataset\n",
+    "\n",
+    "ds = load_dataset(\"ethz/food101\")\n",
+    "train_data = ds[\"train\"]\n",
+    "validation_data = ds[\"validation\"]\n",
+    "\n",
+    "class_label_mapping = {\n",
+    "  \"apple_pie\": 0,\n",
+    "  \"baby_back_ribs\": 1,\n",
+    "  \"baklava\": 2,\n",
+    "  \"beef_carpaccio\": 3,\n",
+    "  \"beef_tartare\": 4,\n",
+    "  \"beet_salad\": 5,\n",
+    "  \"beignets\": 6,\n",
+    "  \"bibimbap\": 7,\n",
+    "  \"bread_pudding\": 8,\n",
+    "  \"breakfast_burrito\": 9,\n",
+    "  \"bruschetta\": 10,\n",
+    "  \"caesar_salad\": 11,\n",
+    "  \"cannoli\": 12,\n",
+    "  \"caprese_salad\": 13,\n",
+    "  \"carrot_cake\": 14,\n",
+    "  \"ceviche\": 15,\n",
+    "  \"cheesecake\": 16,\n",
+    "  \"cheese_plate\": 17,\n",
+    "  \"chicken_curry\": 18,\n",
+    "  \"chicken_quesadilla\": 19,\n",
+    "  \"chicken_wings\": 20,\n",
+    "  \"chocolate_cake\": 21,\n",
+    "  \"chocolate_mousse\": 22,\n",
+    "  \"churros\": 23,\n",
+    "  \"clam_chowder\": 24,\n",
+    "  \"club_sandwich\": 25,\n",
+    "  \"crab_cakes\": 26,\n",
+    "  \"creme_brulee\": 27,\n",
+    "  \"croque_madame\": 28,\n",
+    "  \"cup_cakes\": 29,\n",
+    "  \"deviled_eggs\": 30,\n",
+    "  \"donuts\": 31,\n",
+    "  \"dumplings\": 32,\n",
+    "  \"edamame\": 33,\n",
+    "  \"eggs_benedict\": 34,\n",
+    "  \"escargots\": 35,\n",
+    "  \"falafel\": 36,\n",
+    "  \"filet_mignon\": 37,\n",
+    "  \"fish_and_chips\": 38,\n",
+    "  \"foie_gras\": 39,\n",
+    "  \"french_fries\": 40,\n",
+    "  \"french_onion_soup\": 41,\n",
+    "  \"french_toast\": 42,\n",
+    "  \"fried_calamari\": 43,\n",
+    "  \"fried_rice\": 44,\n",
+    "  \"frozen_yogurt\": 45,\n",
+    "  \"garlic_bread\": 46,\n",
+    "  \"gnocchi\": 47,\n",
+    "  \"greek_salad\": 48,\n",
+    "  \"grilled_cheese_sandwich\": 49,\n",
+    "  \"grilled_salmon\": 50,\n",
+    "  \"guacamole\": 51,\n",
+    "  \"gyoza\": 52,\n",
+    "  \"hamburger\": 53,\n",
+    "  \"hot_and_sour_soup\": 54,\n",
+    "  \"hot_dog\": 55,\n",
+    "  \"huevos_rancheros\": 56,\n",
+    "  \"hummus\": 57,\n",
+    "  \"ice_cream\": 58,\n",
+    "  \"lasagna\": 59,\n",
+    "  \"lobster_bisque\": 60,\n",
+    "  \"lobster_roll_sandwich\": 61,\n",
+    "  \"macaroni_and_cheese\": 62,\n",
+    "  \"macarons\": 63,\n",
+    "  \"miso_soup\": 64,\n",
+    "  \"mussels\": 65,\n",
+    "  \"nachos\": 66,\n",
+    "  \"omelette\": 67,\n",
+    "  \"onion_rings\": 68,\n",
+    "  \"oysters\": 69,\n",
+    "  \"pad_thai\": 70,\n",
+    "  \"paella\": 71,\n",
+    "  \"pancakes\": 72,\n",
+    "  \"panna_cotta\": 73,\n",
+    "  \"peking_duck\": 74,\n",
+    "  \"pho\": 75,\n",
+    "  \"pizza\": 76,\n",
+    "  \"pork_chop\": 77,\n",
+    "  \"poutine\": 78,\n",
+    "  \"prime_rib\": 79,\n",
+    "  \"pulled_pork_sandwich\": 80,\n",
+    "  \"ramen\": 81,\n",
+    "  \"ravioli\": 82,\n",
+    "  \"red_velvet_cake\": 83,\n",
+    "  \"risotto\": 84,\n",
+    "  \"samosa\": 85,\n",
+    "  \"sashimi\": 86,\n",
+    "  \"scallops\": 87,\n",
+    "  \"seaweed_salad\": 88,\n",
+    "  \"shrimp_and_grits\": 89,\n",
+    "  \"spaghetti_bolognese\": 90,\n",
+    "  \"spaghetti_carbonara\": 91,\n",
+    "  \"spring_rolls\": 92,\n",
+    "  \"steak\": 93,\n",
+    "  \"strawberry_shortcake\": 94,\n",
+    "  \"sushi\": 95,\n",
+    "  \"tacos\": 96,\n",
+    "  \"takoyaki\": 97,\n",
+    "  \"tiramisu\": 98,\n",
+    "  \"tuna_tartare\": 99,\n",
+    "  \"waffles\": 100\n",
+    "}\n",
+    "\n",
     "import torch\n",
-    "from torchvision import datasets, transforms\n",
-    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torchvision import transforms\n",
+    "from datasets import load_dataset\n",
     "from PIL import Image\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Define a dummy argparse namespace for testing\n",
-    "class Args:\n",
-    "    def __init__(self):\n",
-    "        self.data_dir = '/Users/francoisporcher/Downloads'  # Update to your data path\n",
-    "        self.image_size = 224\n",
-    "        self.batch_size = 32\n",
-    "        self.num_workers = 4\n",
+    "# Load the dataset\n",
+    "ds = load_dataset(\"ethz/food101\")\n",
+    "train_data = ds[\"train\"]\n",
+    "validation_data = ds[\"validation\"]\n",
     "\n",
-    "args = Args()\n",
+    "# Define transformations\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((224, 224)),  # Resize to 224x224, typical size for models like ResNet\n",
+    "    transforms.ToTensor(),          # Convert PIL Image to Tensor\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])  # Normalize with ImageNet stats\n",
+    "])\n",
     "\n",
-    "# Define the function to get dataloaders\n",
-    "def get_imagenet_loaders(args):\n",
-    "    transform_train = transforms.Compose([\n",
-    "        transforms.RandomResizedCrop(args.image_size),\n",
-    "        transforms.RandomHorizontalFlip(),\n",
-    "        transforms.ToTensor(),\n",
-    "        transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
-    "    ])\n",
+    "# Define a custom Dataset class\n",
+    "class Food101Dataset(Dataset):\n",
+    "    def __init__(self, dataset, class_label_mapping, transform=None):\n",
+    "        self.dataset = dataset\n",
+    "        self.class_label_mapping = class_label_mapping\n",
+    "        self.transform = transform\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.dataset)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        item = self.dataset[idx]\n",
+    "        image = item['image']\n",
+    "        label = item['label']\n",
+    "        \n",
+    "        # Apply the transform if provided\n",
+    "        if self.transform:\n",
+    "            image = self.transform(image)\n",
+    "        \n",
+    "        # Convert label index to actual label string using the mapping\n",
+    "        label_name = list(self.class_label_mapping.keys())[label]\n",
+    "        label_idx = self.class_label_mapping[label_name]\n",
+    "        \n",
+    "        return image, label_idx  # No need to return label_name for training\n",
     "\n",
-    "    transform_val = transforms.Compose([\n",
-    "        transforms.Resize(256),\n",
-    "        transforms.CenterCrop(args.image_size),\n",
-    "        transforms.ToTensor(),\n",
-    "        transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
-    "    ])\n",
+    "# Create the custom Dataset\n",
+    "train_dataset = Food101Dataset(train_data, class_label_mapping, transform)\n",
+    "validation_dataset = Food101Dataset(validation_data, class_label_mapping, transform)\n",
     "\n",
-    "    train_dir = args.data_dir + '/imagenet-object-localization-challenge/ILSVRC/Data/CLS-LOC/train'\n",
-    "    val_dir = args.data_dir + '/imagenet-object-localization-challenge/ILSVRC/Data/CLS-LOC/val'\n",
+    "# Define DataLoader parameters\n",
+    "batch_size = 2\n",
+    "num_workers = 0\n",
     "\n",
-    "    train_dataset = datasets.ImageFolder(root=train_dir, transform=transform_train)\n",
-    "    val_dataset = datasets.ImageFolder(root=val_dir, transform=transform_val)\n",
+    "# Create DataLoaders\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=num_workers)\n",
+    "val_loader = DataLoader(validation_dataset, batch_size=batch_size, shuffle=False, num_workers=num_workers)\n",
     "\n",
-    "    train_loader = DataLoader(train_dataset, batch_size=args.batch_size, shuffle=True, num_workers=args.num_workers)\n",
-    "    val_loader = DataLoader(val_dataset, batch_size=args.batch_size, shuffle=False, num_workers=args.num_workers)\n",
+    "# Verify the DataLoader works\n",
+    "sample_batch = next(iter(train_loader))\n",
+    "images, labels = sample_batch\n",
     "\n",
-    "    return train_loader, val_loader\n",
-    "\n",
-    "# Initialize the data loaders\n",
-    "train_loader, val_loader = get_imagenet_loaders(args)\n",
-    "\n",
-    "# Test the data loader by fetching a single batch\n",
-    "data_iter = iter(train_loader)\n",
-    "images, labels = next(data_iter)\n",
-    "\n",
-    "# Visualize the first few images in the batch\n",
-    "def imshow(img):\n",
-    "    img = img / 2 + 0.5  # Unnormalize\n",
-    "    npimg = img.numpy()\n",
-    "    plt.imshow(np.transpose(npimg, (1, 2, 0)))\n",
-    "    plt.show()\n",
-    "\n",
-    "# Show images\n",
-    "imshow(torchvision.utils.make_grid(images))\n",
-    "\n",
-    "# Print the labels\n",
-    "print('Labels:', labels)"
+    "print(images.shape)  # Should output: torch.Size([batch_size, 3, 224, 224])\n",
+    "print(labels)        # Should output the batch of labels"
    ]
   },
   {
